# ocr-process-pipeline-poc

./: .dockerignore  CLOUD_DEPLOYMENT.txt  COMMANDS.txt  DOCKER_K8S_SETUP.md  Dockerfile  Dockerfile.dev  compose.dev.yaml  compose.yaml  deploy.ps1  deploy.sh  hosts-setup.txt  nginx-docker.conf  nginx-setup-guide.md  nginx.conf  pipeline.py  pipeline_paddle.py  pyproject.toml  setup-nginx.ps1  setup-nginx.sh  setup-server.ps1  setup-server.sh  start-flask.ps1
backend/: main.py
backend/app/: __init__.py  constants.py  file_upload_handler.py  routes.py  sockets.py
backend/app/ocr/: pipeline.py  utils.py
frontend/: angular.json  components.json  package.json  tsconfig.json
frontend/all/sidebar/src/lib/: hlm-sidebar-trigger.ts
frontend/src/: styles.scss  tailwind.css
frontend/src/app/: app.html  app.routes.ts  app.ts
frontend/src/app/components/documents/: documents.ts
frontend/src/app/components/file-viewer/: file-viewer.html  file-viewer.spec.ts  file-viewer.ts
frontend/src/app/components/file-viewer/apryse-viewer/: apryse-viewer.html  apryse-viewer.spec.ts  apryse-viewer.ts
frontend/src/app/components/listing/: listing.html  listing.spec.ts  listing.ts
frontend/src/app/components/navbar/: navbar.html  navbar.ts
frontend/src/app/components/sidebar/: sidebar.html  sidebar.ts
frontend/src/app/services/: webviewer.service.spec.ts  webviewer.service.ts
k8s/: deployment-dev.yaml  deployment.yaml
